# bit

./: .DEV.swp  .QUESTION.swp  .buildconfig  .demo.txt.swp  .dockerignore  .gitignore  .travis.yml  Cargo.toml  Cargo.toml~  DEV  Dockerfile  ERROR_CODE  LICENSE  Makefile  QUESTION  README  Rocket.toml  TODO  accounts  accounts~  analytics.html  analytics.rmd  data.json  demo.bit  demo.bit~  demo.sh  demo.txt  dev.txt  doc.txt  index.html  langdesign  maurergép-szegedi-találkozó-összefoglaló.txt  package.json  processor_design  readme.md  test.bit
_cli/: Cargo.toml
_cli/src/: cli.rs  lib.rs  main.rs
api/: Cargo.toml
api/src/: guard.rs  main.rs  prelude.rs
api/src/controller/: account.rs  mod.rs  (+10 more)
bit_cli/: Cargo.toml
bit_cli/src/: jsonparser.rs  main.rs  parser.rs
bit_core/: Cargo.toml  Cargo.toml~
bit_core/src/: account.rs  e.rs  event.rs  lib.rs
bitc/: Cargo.toml
bitc/src/: cli.rs  main.rs
cli/: .Cargo.toml.swp  Cargo.toml  Readme  _build.rs
cli/src/: .editor.rs.swp  cli.rs  editor.rs  lib.rs  main.rs  prelude.rs  row.rs  tags  terminal.rs
client/: nginx.conf  package-lock.json  package.json
client/src/: index.html
core/: .dockerignore  Cargo.toml  DEV.txt  demojson  readme.md
core/src/: .note.rs.swp  account.rs  balance.rs  blob.rs  cmd.rs  context.rs  core.rs  db.rs  email.rs  error.rs  event.rs  fs.rs  index.rs  ledger.rs  lib.rs  main.rs  message.rs  note.rs  parser.rs  partner.rs  prelude.rs  refact.rs  rpc.rs  settings.rs  signature.rs  storage.rs  sync.rs  tags  user.rs
core/src/commands/: version.rs
core/src/model/: account.rs  asset.rs  document.rs  folder.rs  mod.rs  project.rs  repository.rs  transaction.rs  user.rs
core/src/model/history/folder/: folder0.rs  mod.rs
core/src/model/version/asset/: v1.rs
core/src/model/version/project/: v1.rs
core/src/model/version/repository/: v1.rs  v2.rs
core/src/model/version/transaction/: v2.rs
core/src/repo/: account.rs  event.rs  mod.rs  transaction.rs
core/src/repo/model/: account1.rs  card1.rs  mod.rs  transaction1.rs
core/src/user/: mod.rs  password.rs
core/src/user/model/: user_v1.rs
core/tests/: test_user_storage.rs
corelib/: Cargo.toml
corelib/src/: account.rs  actions.rs  blob.rs  context.rs  fs.rs  index.rs  ledger.rs  lib.rs  note.rs  parser.rs  partner.rs  prelude.rs
db_sync/: DEV.txt
db_sync/src/: lib.rs  server.rs  sync.rs
demo/: accounts.bit  config.toml
demo/.bit/: files
demo/logs/: demo.bit  demo2.bit
democli/: Cargo.toml
democli/src/: main.rs
design/: balance.html  commit_editor.html  index.html
doc/: bit_protocol.txt  doc.txt  event.txt
docker/nginx/: nginx.conf
docs/: book.txt  example.bit  langdesign  script.txt  v2.txt  v2_.txt  v3.txt  version_control.txt
docs/design/: v1.txt
editor/: demo.txt
editor/src/: document.rs  editor.rs  lib.rs  row.rs  terminal.rs
example/: accounts.bit  new_note.bit
example/notes/: 2.bit  3.bit  4.bit  b.bit  c.bit
fs/: Cargo.toml  dev.txt
fs/src/: lib.rs  util.rs
parser/: Cargo.toml  README
parser/src/: frame.rs  lib.rs  parse.rs  token.rs
proto/: build.rs
proto/proto/: sync.proto
proto/src/: bit_sync.rs  lib.rs
protocol/: dev.txt
protocol/src/: lib.rs
repository/: Cargo.toml
repository/src/: actions.rs  fs.rs  lib.rs  prelude.rs  server.rs  sync.rs
src/: #main.rs#  .#main.rs  cmd_parser.rs  config.rs  context.rs  file.rs  file_index.rs  inspector.rs  ledger.rs  lib.rs  main.rs  model.rs  note.rs  parser.rs  project.rs  signature.rs  transaction.rs
src/commands/: mod.rs
static/: script.js  shortcut.js  style.css  style.css.map  style.sass
token/: Cargo.toml
token/src/: main.rs
web/: Cargo.toml
website/: Cargo.toml
website/src/: guard.rs  layout.rs  login.rs  main.rs  prelude.rs
website/templates/: footer.hbs  index.hbs  layout.hbs  layout_empty.hbs  login.hbs  login_error.hbs  login_reset_password.hbs  login_reset_password_error.hbs  login_reset_password_success.hbs  nav.hbs  profile.hbs  profile_new_password.hbs  profile_new_password_error.hbs  profile_new_password_success.hbs  profile_save_success.hbs  team.hbs  team_add_member.hbs  team_add_member_error.hbs  team_add_member_success.hbs  user copy.hbs  user.hbs  user_add_user.hbs  user_add_user_success.hbs  user_reset_password.hbs
(+94 files in other folders)
