[package]
name = "bit"
version = "0.0.2"
authors = ["Peter Mezei <mezeipetister@gmail.com>"]
edition = "2018"
license = "GPLv2"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde_cbor = "0.11.1"
serde = {version = "1.0", features = ["derive"]}
structopt = "*"
uuid = { version = "0.8", features = ["serde", "v4"] }
toml = "*"
packman = "*"