[package]
edition = "2021"
name = "clidemo"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4", features = ["serde"]}
serde = {version = "1.0.147", features = ["derive"]}
serde_json = "1.0.89"
toml = "0.5.9"
