[package]
description = "BIT double entry book keeping software.\nAll right reserved Peter Mezei 2023."
edition = "2021"
name = "bit"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.23", features = ["serde"]}
clap = {version = "4.1.4", features = ["derive"]}
core = {path = "../core"}

[build-dependencies]
chrono = {version = "0.4.23", features = ["serde"]}
clap = "4.1.4"
clap_complete = "3.1"
clap_complete_fig = "3.1"
core = {path = "../core"}
