[package]
description = "BIT double entry book keeping software.\nAll right reserved Peter Mezei 2023."
edition = "2021"
name = "cli"
version = "0.1.0-pr1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "2.0.1"
unicode-segmentation = "1.10.1"