[package]
edition = "2021"
name = "clidemo"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.59"
bincode = "1.3.3"
chrono = {version = "0.4", features = ["serde"]}
hex = "0.4.3"
serde = {version = "1.0.147", features = ["derive"]}
serde_json = "1.0.89"
sha1 = "0.10.0"
tokio = {version = "1.21.2", features = ["full"]}
tokio-stream = {version = "0.1.11", features = ["net"]}
toml = "0.5.9"
tonic = "0.8.2"
uuid = {version = "*", features = ["serde", "v4"]}
