[package]
edition = "2021"
name = "core"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
chrono = {version = "0.4.23", features = ["serde"]}
cli-table = "0.4.7"
serde = {version = "1.0.147", features = ["derive", "rc"]}
serde_json = "1.0.89"
textwrap = "0.16.0"
thousands = "*"
uuid = {version = "1.2.2", features = ["v4", "serde"]}
